--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lodash": "^4.17.10",
     "popper.js": "^1.12",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1"
   },
   "dependencies": {
     "@material-ui/core": "^1.4.3",
