--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^2.7.2",
     "classnames": "latest",
     "html-to-react": "^1.3.3",
+    "immer": "^1.8.0",
     "konva": "^2.4.0",
     "leaflet": "^1.3.1",
     "leaflet-geosearch": "^2.6.0",
@@ -46,6 +47,7 @@
     "react-swipeable-views": "^0.12.14",
     "reactjs-popup": "^1.1.1",
     "reactstrap": "^6.1.0",
+    "redux-undo": "^0.6.1",
     "suncalc": "^1.8.0",
     "three": "^0.93.0",
     "three-text2d": "^0.4.1",
