--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "three": "^0.93.0",
     "three-text2d": "^0.4.1",
     "three.textsprite": "^18.3.19",
-    "three.texttexture": "^18.3.19"
+    "three.texttexture": "^18.3.19",
+    "uuid": "^3.3.2"
   }
 }
